/**
 * Created by qfeng on 2019/02/25
 */

syntax = "proto3";

option cc_enable_arenas = true;
option java_outer_classname = "EncodeBunchPb";
option java_multiple_files = true;
option java_package = "algocomp";

import "encpb/encode_data.proto";

package algocomp;

message EncodeBunch {
    repeated EncodeData encs = 1;
}